WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210124
Return app-bound sessions for instances where WKAppBoundDomains is empty
https://bugs.webkit.org/show_bug.cgi?id=210124
Summary
Return app-bound sessions for instances where WKAppBoundDomains is empty
Kate Cheney
Reported
2020-04-07 09:45:36 PDT
We can use the mechanisms implemented in
bug 210074
to signal whether the WKAppBoundDomains list is empty, and return an app-bound network session by default.
Attachments
Patch
(13.64 KB, patch)
2020-04-07 10:01 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch
(15.08 KB, patch)
2020-04-07 10:41 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch
(15.79 KB, patch)
2020-04-07 10:59 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch for landing
(15.79 KB, patch)
2020-04-07 11:14 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch
(15.89 KB, patch)
2020-04-07 16:17 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch
(11.91 KB, patch)
2020-04-07 16:45 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch
(11.91 KB, patch)
2020-04-08 08:46 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch for landing
(11.91 KB, patch)
2020-04-08 10:45 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2020-04-07 10:01:07 PDT
Created
attachment 395693
[details]
Patch
Kate Cheney
Comment 2
2020-04-07 10:41:37 PDT
Created
attachment 395705
[details]
Patch
Kate Cheney
Comment 3
2020-04-07 10:59:15 PDT
Created
attachment 395709
[details]
Patch
Brent Fulgham
Comment 4
2020-04-07 11:09:10 PDT
Comment on
attachment 395709
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=395709&action=review
> Source/WebKit/UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm:412 > + RunLoop::main().dispatch([isInAppBrowserPrivacyEnabled, forceReinitialization , domains = retainPtr(domains)] {
Nit: Extra space after 'forceReinitialization'
Kate Cheney
Comment 5
2020-04-07 11:14:22 PDT
Created
attachment 395712
[details]
Patch for landing
Kate Cheney
Comment 6
2020-04-07 11:15:52 PDT
<
rdar://problem/61276630
>
EWS
Comment 7
2020-04-07 11:43:51 PDT
Committed
r259655
: <
https://trac.webkit.org/changeset/259655
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395712
[details]
.
Ryan Haddad
Comment 8
2020-04-07 15:26:46 PDT
Seeing the following on iOS debug tests after this change: ASSERTION FAILED: hasInitializedAppBoundDomains /Volumes/Data/slave/ios-simulator-13-debug/build/Source/WebKit/UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm(445) : auto WebKit::WebsiteDataStore::ensureAppBoundDomains(CompletionHandler<void (const HashSet<WebCore::RegistrableDomain> &)> &&)::(anonymous class)::operator()()::(anonymous class)::operator()()
https://build.webkit.org/builders/Apple%20iOS%2013%20Simulator%20Debug%20WK2%20(Tests)/builds/3010
This manifests as timeouts on release bots, so EWS is impacted by test retries.
Ryan Haddad
Comment 9
2020-04-07 15:27:43 PDT
Reverted
r259655
for reason: Caused assertion failures and timeouts on iOS bots Committed
r259675
: <
https://trac.webkit.org/changeset/259675
>
Kate Cheney
Comment 10
2020-04-07 16:17:37 PDT
Created
attachment 395757
[details]
Patch
Kate Cheney
Comment 11
2020-04-07 16:18:13 PDT
(In reply to katherine_cheney from
comment #10
)
> Created
attachment 395757
[details]
> Patch
Letting EWS run.
Kate Cheney
Comment 12
2020-04-07 16:45:26 PDT
Created
attachment 395759
[details]
Patch
Kate Cheney
Comment 13
2020-04-08 08:46:11 PDT
Created
attachment 395817
[details]
Patch
Kate Cheney
Comment 14
2020-04-08 10:40:13 PDT
(In reply to katherine_cheney from
comment #13
)
> Created
attachment 395817
[details]
> Patch
iOS API and wk bots are green.
Kate Cheney
Comment 15
2020-04-08 10:45:32 PDT
Created
attachment 395832
[details]
Patch for landing
EWS
Comment 16
2020-04-08 11:07:57 PDT
Committed
r259731
: <
https://trac.webkit.org/changeset/259731
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395832
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug